--- a/scss/components/_divs.scss
+++ b/scss/components/_divs.scss
@@ -40,6 +40,7 @@
       margin-right: $spacing-small;
     }
     justify-content: space-between;
+    align-items: center;
     background-color: $color-primary;
     padding: $spacing-small;
     border-radius: $border-slightly-round-radius;
