--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -38,6 +38,7 @@
   @extend %rounded;
   color: $off-white;
   font-weight: $weight-thick;
+  margin-left: $spacing-medium;
 }
 
 .text {
